trunk/Archive2/e2/4f5095d55fd625/output
main.cpp:131:37: error: no member named 'return_type' in namespace 'std'
    static_assert(std::is_same<std::return_type<decltype(func)>, void>::value == true, "is same");
                               ~~~~~^
main.cpp:131:63: error: expected '(' for function-style cast or type construction
    static_assert(std::is_same<std::return_type<decltype(func)>, void>::value == true, "is same");
                                                ~~~~~~~~~~~~~~^
2 errors generated.
